# Examination_project_STI

./: README.md  pyproject.toml
src/exploarations/marcus/: eda.ipynb
